--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,11 @@ matplotlib
 protobuf
 sentencepiece
 tqdm
+lovely_tensors
 nvidia-nccl-cu12==2.20.5
 
 # Pytorch
 -f https://download.pytorch.org/whl/cu124
-torch==2.4.1+cu124
-torchvision==0.19.1+cu124
+torch==2.4.1
+torchvision==0.19.1
 torchaudio==2.4.1
